--- a/EXs/api-contratos/package.json
+++ b/EXs/api-contratos/package.json
@@ -10,8 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.12.2",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "jade": "~1.11.0",
+    "mongoose": "^8.13.0",
+    "morgan": "~1.9.1"
   }
 }
